<resources>
    <string name="app_name">QUIZ</string>
    <string name="first_page">test your g.k</string>
    <string name="title_main">quiz</string>
    <string name="enter_your_details">enter your details</string>
    <string name="Enter_your_Name">Enter your Name</string>
    <string name="email_id">E-mail Id</string>
    <string name="start">start</string>
    <string name="instructions">instructions:</string>
    <string name="ins1">1.Questions with checkboxes have multiple correct answers.</string>
    <string name="ins2">2.Questions with edittext are to be answered correctly.</string>
    <string name="ins3">3.No negative marks for wrong answers. so attempt all questions.</string>
    <string name="questions_title">questions</string>
    <string name="qq1">Q.1. India got independence in the year</string>
    <string name="blank"></string>
    <string name="qq2">Q.2. Which among the following are states in India?</string>
    <string name="andhra">Andhra Pradesh</string>
    <string name="delhi">Delhi</string>
    <string name="goa">Goa</string>
    <string name="kerala">Kerala</string>
    <string name="qq_3">Q.3. India has ____ states and ____ union territories.</string>
    <string name="q3_rb1">29,7 respectively</string>
    <string name="q3_rb2">25,7 respectively</string>
    <string name="q3_rb3">25,5 respectively</string>
    <string name="q3_rb4">28,7 respectively</string>
    <string name="qq_4">Q.4. Which amng the following is(are) capital(s) of South Africa?</string>
    <string name="capetown">Cape Town</string>
    <string name="pretoria">Pretoria</string>
    <string name="bloemfontein">Bloemfontein</string>
    <string name="rawanda">Rawanda</string>
    <string name="qq_5">Q.5. Who is known as  the Iron Lady of Britain?</string>
    <string name="BorisJohnson">Boris Johnson</string>
    <string name="TheresaMay">Theresa May</string>
    <string name="DonaldTrump">Donald Trump</string>
    <string name="MargaretThatcher">Margaret Thatcher</string>
    <string name="submit_text">Click Submit button to check your score.</string>
    <string name="submit">submit</string>
    <string name="ViewScoreboard">View Scoreboard</string>
    <string name="resetanswers">reset answers</string>
    <string name="scoreboard">scoreboard</string>
    <string name="quesfin">Send scorecard to your Mailbox?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="restart">restart</string>
    <string name="retake">retake</string>
    <string name="user_mailId_toast">Please enter valid e-mail address!</string>
    <string name="user_name_toast">Please enter your name!</string>
    <string name="user_name">user_name</string>
    <string name="user_mailId">user_mailId</string>
    <string name="Welcome">Welcome\t</string>
    <string name="imp">!</string>
    <string name="wel2">\nYour mail-Id is:\t</string>
    <string name="atb">\nAll the Best!!</string>
    <string name="ysi">Your Score is\t</string>
    <string name="oof">\tout of\t</string>
    <string name="marks">marks</string>
    <string name="lastm">\nThanks for participating in this quiz.\tGood Luck!\nExit application or Restart quiz or Attempt again!</string>
    <string name="good">good</string>
    <string name="average">average</string>
    <string name="poor">poor!</string>
    <string name="ypi">\nYour performance is\t</string>
    <string name="mailto">mailto:</string>
    <string name="Scorefor">Score for\t</string>
    <string name="inQuizApp">\tin Quiz App</string>
    <string name="newline">\n</string>
    <string name="q1_sbc">Your question-1 is correct</string>
    <string name="q1_sbw">Your question-1 is wrong</string>
    <string name="q2_sbc">Your question-2 is correct</string>
    <string name="q2_sbw">Your question-2 is wrong</string>
    <string name="q3_sbc">Your question-3 is correct</string>
    <string name="q3_sbw">Your question-3 is wrong</string>
    <string name="q4_sbc">Your question-4 is correct</string>
    <string name="q4_sbw">Your question-4 is wrong</string>
    <string name="q5_sbc">Your question-5 is correct</string>
    <string name="q5_sbw">Your question-5 is wrong</string>
    <string name="rema">Read well, know what is happening around you</string>
    <string name="rema2">Good, keep going</string>


</resources>
